# cpg-to-acp

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compose.yml
acp-writer/: Dockerfile  README.md  pyproject.toml
acp-writer/api/: mcp-tools.json  openapi.yaml
acp-writer/decision-service/: pom.xml
acp-writer/decision-service/deploy/: Dockerfile
acp-writer/decision-service/deploy/chart/: Chart.yaml  values.yaml
acp-writer/deploy/: Dockerfile
acp-writer/deploy/chart/: Chart.yaml  values.yaml
acp-writer/deploy/chart-pods/: Chart.yaml  values.yaml
acp-writer/deploy/chart-pods/templates/: deployments.yaml  networkpolicies.yaml  pdbs.yaml  route.yaml  services.yaml
acp-writer/deploy/chart/templates/: deployment.yaml  networkpolicy.yaml  route.yaml  service.yaml
acp-writer/deploy/openshell/: target-policy.yaml
acp-writer/deploy/orchestrator/: acp-writer-workflow.yaml
acp-writer/src/acp_writer/: api.py  careplan.py  checkpointer.py  main.py  mcp_proxy.py  mcp_server.py  output.py  pipeline.py  planning_brief.py  state.py
acp-writer/src/acp_writer/nodes/: brief_reviewer.py  condition_scanner.py  dmn_executor.py  fhir_bundle_generator.py  fhir_semantic_reviewer.py  fhir_server_writer.py  fhir_syntax_validator.py  guideline_resolver.py  plan_composer.py  recommendation_retriever.py  terminology_validator.py
acp-writer/src/acp_writer/prompts/: brief_reviewer.py  fhir_semantic_reviewer.py  plan_composer.py
acp-writer/src/acp_writer/services/: decision_engine.py  fhir_generation.py  fhir_server.py  llm_reasoning.py  patient_data.py
acp-writer/src/acp_writer/store/: embedding.py  guidelines_store.py  vector_store.py
acp-writer/src/acp_writer/tools/: ips_extractor.py  terminology_lookup.py
acp-writer/src/acp_writer/ui/: app.py
acp-writer/src/acp_writer/validators/: fhir_bundle_builder.py  fhir_syntax.py
acp-writer/tests/: conftest.py  test_brief_reviewer.py  test_condition_scanner.py  test_dmn_executor.py  test_e2e.py  test_fhir_builder.py  test_fhir_semantic_reviewer.py  test_fhir_server_writer.py  test_guideline_resolver.py  test_integration.py  test_ips_extractor.py  test_knowledge.py  test_pipeline.py  test_plan_composer.py  test_planning_brief.py  test_recommendation_retriever.py  test_state.py  test_terminology.py  test_validators.py
cpg-ingester/: .gitignore  README.md  pyproject.toml
cpg-ingester/data/: synthetic-hypertension-cpg.md
cpg-ingester/data/golden/: monitoring-plan.dmn  treatment-recommendation.dmn
cpg-ingester/deploy/: Dockerfile
cpg-ingester/deploy/chart/: Chart.yaml  values.yaml
cpg-ingester/deploy/chart/templates/: deployments.yaml  networkpolicies.yaml  pdbs.yaml  route.yaml  services.yaml
cpg-ingester/deploy/orchestrator/: cpg-ingester-workflow.yaml
cpg-ingester/src/cpg_ingester/: cli.py  deploy.py  extract_dmn.py  generation.py  output.py  parse.py  pipeline.py  state.py
cpg-ingester/src/cpg_ingester/nodes/: __init__.py  assembly.py  classification_reviewer.py  content_filter.py  delivery.py  dmn_creator.py  dmn_semantic_reviewer.py  dmn_syntax_validator.py  docling_agent.py  item_identifier.py  metadata_extractor.py  rec_extractor.py  rec_schema_validator.py  rec_semantic_reviewer.py  structure_analyzer.py
cpg-ingester/src/cpg_ingester/prompts/: __init__.py  classification_reviewer.py  dmn_creator.py  dmn_semantic_reviewer.py  item_identifier.py  metadata_extractor.py  rec_extractor.py  rec_semantic_reviewer.py  structure_analyzer.py
cpg-ingester/src/cpg_ingester/ui/: app.py  (+1 more)
cpg-ingester/tests/: mock_receiver.py  test_assembly_delivery.py  test_classification_reviewer.py  test_content_filter.py  test_dmn.py  test_dmn_semantic_reviewer.py  test_docling_agent.py  test_e2e.py  test_item_identifier.py  test_metadata_extractor.py  test_pipeline.py  test_rec.py  test_rec_loop_live.py  test_rec_reviewer_live.py  test_rec_semantic_reviewer.py  test_state.py  test_structure_analyzer.py  test_ui.py  test_validators.py
mock-EHR/: README.md  pyproject.toml
mock-EHR/data/: patient-bundle-lifestyle.json  patient-bundle-medication.json
mock-EHR/deploy/: Dockerfile.loader  Dockerfile.mcp
mock-EHR/deploy/chart/: Chart.yaml  values.yaml
mock-EHR/docker/: Dockerfile.loader  load-data.sh
mock-EHR/src/mock_ehr/: mcp_app.py  mcp_server.py
shared/: README.md  pyproject.toml
shared/src/cpg_contracts/: __init__.py  artifact_store.py  cloud_events.py  decisions.py  fhir.py  guidelines.py  recommendations.py  search.py
shared/tests/: test_contracts.py
shared/tests/fixtures/: sample-recommendations.json
(+91 files in other folders)
