[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-writer"
version = "0.1.0"
description = "Compose patient-specific FHIR CarePlans from DMN decision outputs"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "requests>=2.31",
    "click>=8.0",
    "cpg-contracts",
    "mlflow>=2.15",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
acp-writer = "acp_writer.main:main"

[tool.setuptools.packages.find]
where = ["src"]
