[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpg-ingester"
version = "0.1.0"
description = "Parse CPGs and extract DMN decision logic"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "docling>=2.0",
    "openai>=1.0",
    "click>=8.0",
    "requests>=2.31",
    "cpg-contracts",
    "mlflow>=2.15",
]

[project.scripts]
cpg-parse = "cpg_ingester.parse:main"
cpg-extract-dmn = "cpg_ingester.extract_dmn:main"
cpg-deploy-dmn = "cpg_ingester.deploy:main"

[tool.setuptools.packages.find]
where = ["src"]
