[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-ehr"
version = "0.1.0"
description = "FHIR MCP tools for patient data access"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "mcp>=1.0",
    "requests>=2.31",
    "mlflow>=2.15",
    "cpg-contracts",
]

[tool.setuptools.packages.find]
where = ["src"]
