[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpg-contracts"
version = "0.1.0"
description = "Shared contract types for CPG-to-ACP components"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.28"]

[tool.setuptools.packages.find]
where = ["src"]
